Update index.html fix battery reading

--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -338,7 +338,7 @@
                 var t = normalise(prenorm)
                 // console.log("Data (postnorm)", t)
 
-                window.b.value = Math.floor( 100 * t.b )
+                window.b.value = Math.floor( t.b )
                 window.b.title = t.b + '% battery'
 
                 window.state.innerHTML = t.s
