--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -8,6 +8,7 @@
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <script src="puck.js"></script>
+        <script src="gambit-client.js"></script>
         <script src="kalman.js"></script>
         <style>
 
