--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>SIMCAP</h1>
-    <p>Sensor Inferred MOtion CAPture</p>
+    <p>Sensor Inferred Motion CAPture</p>
     <p>Redirecting to <a href="../../">main page</a>...</p>
 </body>
 </html>
