--- a/src/web/loader/index.html
+++ b/src/web/loader/index.html
@@ -6,88 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+    <link rel="stylesheet" href="../../simcap.css">
     <!-- Eruda Dev Console for Mobile Debugging -->
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
     <script src="../GAMBIT/puck.js"></script>
     <script src="../GAMBIT/gambit-client.js"></script>
     <style>
-        * { box-sizing: border-box; }
-        :root {
-            --bg: #0f0f23;
-            --surface: #1a1a2e;
-            --surface-alt: #16213e;
-            --primary: #00d4ff;
-            --success: #00ff88;
-            --warning: #ffa502;
-            --danger: #ff4757;
-            --text: #eee;
-            --text-muted: #888;
-        }
-        body, html {
-            margin: 0;
-            padding: 0;
-            background: var(--bg);
-            color: var(--text);
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            font-size: 14px;
-            min-height: 100vh;
-        }
+        /* Page-specific styles */
         body {
-            padding: 15px;
+            padding: var(--space-md);
             max-width: 700px;
             margin: 0 auto;
         }
+
         h1 {
-            color: var(--primary);
-            margin: 0 0 5px 0;
+            color: var(--accent);
+            margin: 0 0 var(--space-xs) 0;
             font-size: 1.8em;
         }
+
         .subtitle {
-            color: var(--text-muted);
-            margin-bottom: 20px;
+            color: var(--fg-muted);
+            margin-bottom: var(--space-lg);
         }
-        .card {
-            background: var(--surface);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 15px;
-        }
+
         .card h2 {
-            margin: 0 0 12px 0;
-            color: var(--primary);
+            margin: 0 0 var(--space-sm) 0;
+            color: var(--accent);
             font-size: 1.1em;
-            padding-bottom: 8px;
-            border-bottom: 1px solid #333;
+            padding-bottom: var(--space-sm);
+            border-bottom: 1px solid var(--border);
         }
+
         .row {
             display: flex;
-            gap: 10px;
-            margin-bottom: 10px;
+            gap: var(--space-sm);
+            margin-bottom: var(--space-sm);
             flex-wrap: wrap;
         }
+
         .row > * { flex: 1; min-width: 120px; }
-        button {
-            padding: 12px 20px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: 600;
-            transition: all 0.2s;
+
+        .btn-success { background: var(--success); color: #000; border-color: var(--success); }
+        .btn-warning { background: var(--warning); color: #000; border-color: var(--warning); }
+        .btn-danger { background: var(--danger); color: #fff; border-color: var(--danger); }
+        .btn-secondary { background: var(--bg-elevated); color: var(--fg); border-color: var(--border); }
+
+        .breadcrumb {
+            font-size: 0.75rem;
+            color: var(--fg-muted);
+            margin-bottom: var(--space-lg);
         }
-        button:hover { opacity: 0.9; transform: translateY(-1px); }
-        button:active { transform: translateY(0); }
-        button:disabled {
-            opacity: 0.4;
-            cursor: not-allowed;
-            transform: none;
+
+        .breadcrumb a:hover {
+            color: var(--fg);
         }
-        .btn-primary { background: var(--primary); color: #000; }
-        .btn-success { background: var(--success); color: #000; }
-        .btn-warning { background: var(--warning); color: #000; }
-        .btn-danger { background: var(--danger); color: #fff; }
-        .btn-secondary { background: #333; color: #fff; }
 
         /* Connection status */
         .status-bar {
@@ -341,6 +315,10 @@
     </style>
 </head>
 <body>
+    <nav class="breadcrumb">
+        <a href="../../">SIMCAP</a> / <a href="../">Web</a> / Loader
+    </nav>
+
     <h1>SIMCAP Firmware Loader</h1>
     <p class="subtitle">Upload firmware to Espruino Puck.js devices via WebBLE</p>
 
